sandervanvugt/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multipod
  namespace: default
spec:
  containers:
  - name: busy
    image: busybox
    command:
      - sleep
      - "300" 
  - name: nginx
    image: nginx
