sandervanvugt/cm-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cm-test-pod
spec:
  restartPolicy: Never
  containers:
  - name: test1
    image: cirros
    command: ["/bin/sh", "-c", "env"]
