sandervanvugt/init-example1.yaml
kind: Pod
apiVersion: v1
metadata:
  name: init-example1
spec:
  containers:
  - name: alpine
    image: alpine
