sandervanvugt/init-example2.yaml
kind: Pod
apiVersion: v1
metadata:
  name: init-example2
spec:
  containers:
  - name: web
    image: nginx
